src/wayland/seat_interface.cpp
@@ -714,6 +714,7 @@ void SeatInterface::notifyPointerButton(quint32 button, PointerButtonState state
                 // not our drag button - ignore
                 return;
             }
+            d->pointer->sendButton(button, state, serial);
             d->endDrag();
             return;
         }
